@@ -17286,6 +17286,7 @@ libs/wave/test/testwave/testfiles/t_1_034.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_1_035.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_1_036.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_1_037.cpp svneol=native#text/plain
+libs/wave/test/testwave/testfiles/t_1_038.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_2_001.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_2_002.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_2_003.cpp svneol=native#text/plain
